--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Festive&family=Libre+Franklin:ital,wght@0,400;0,900;1,400&display=swap" rel="stylesheet">
 </body>
 
 </html>
